--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ataur Rahman",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.4.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "nodemon": "^3.0.1",
+    "prisma": "^5.4.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
