--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "npx prisma generate && nodemon -r tsconfig-paths/register src/index.ts",
+    "start": "npx prisma migrate dev && ts-node -r tsconfig-paths/register src/index.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
     "build": "tsc && tsc-alias"
   },
   "author": "Ataur Rahman",
